Fix layout problem

--- a/src/search/entrance-page.css
+++ b/src/search/entrance-page.css
@@ -36,7 +36,7 @@
 
 .in-building-box .in-building-box-title {
     position: relative;
-    width: 40%;
+    width: 45%;
     height: 10vh;
     display: flex;
     align-items: center;
